--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "rollup-plugin-copy": "^3.4.0",
     "vite": "^2.0.0"
   },
   "dependencies": {
